--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -10,15 +10,8 @@
         android:name="com.example.freelancer.home.HomeFragment"
         android:label="home_fragment"
         tools:layout="@layout/home_fragment" >
-        <action
-            android:id="@+id/action_nav_home_to_testFragment"
-            app:destination="@id/testFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/testFragment"
-        android:name="com.example.freelancer.TestFragment"
-        android:label="fragment_test"
-        tools:layout="@layout/fragment_test" />
+
     <fragment
         android:id="@+id/signInFragment"
         android:name="com.example.freelancer.signin.SignInFragment"
@@ -42,4 +35,16 @@
             android:id="@+id/action_signUpFragment_to_signInFragment"
             app:destination="@id/signInFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_search"
+        android:name="com.example.freelancer.search.SearchFragment"
+        android:label="SearchFragment" >
+        <action
+            android:id="@+id/action_nav_search_to_detailedProjectFragment"
+            app:destination="@id/detailedProjectFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailedProjectFragment"
+        android:name="com.example.freelancer.detailedproject.DetailedProjectFragment"
+        android:label="DetailedProjectFragment" />
 </navigation>
