--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_nav_view"
-        android:background="#FFFFFF"
+        android:background="@drawable/rounded_bottom_nav"
         android:visibility="visible"
         app:menu="@menu/main_bottom_nav_menu"/>
 
