--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -47,4 +47,9 @@
         android:id="@+id/detailedProjectFragment"
         android:name="com.example.freelancer.detailedproject.DetailedProjectFragment"
         android:label="DetailedProjectFragment" />
+    <fragment
+        android:id="@+id/nav_message"
+        android:name="com.example.freelancer.messages.MessageFragment"
+        android:label="message_fragment"
+        tools:layout="@layout/message_fragment" />
 </navigation>
