--- a/app/src/main/res/layout/message_item_view.xml
+++ b/app/src/main/res/layout/message_item_view.xml
@@ -43,6 +43,7 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="26dp"
