--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -38,6 +38,7 @@
         android:layout_marginTop="46dp"
         android:layout_marginEnd="40dp"
         android:background="@drawable/rounded_edit_text"
+        android:text="@={viewModel.signUpEmail}"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -57,6 +58,7 @@
         android:background="@drawable/rounded_edit_text"
         android:ems="10"
         android:hint="Password"
+        android:text="@={viewModel.signUpPassword}"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/sign_in_email"
